@@ -1,6 +1,7 @@
 """
 Test that profile management works properly.
 """
+import os
 from unittest.mock import patch
 import cloudless.profile
 
@@ -14,10 +15,25 @@ def test_profile(mock_instance):
     """
     mock_instance = mock_instance.return_value
     mock_instance.load.return_value = {"myprofile": {"provider": "mock-aws"}}
+
+    # Load profile we mocked out
     result = cloudless.profile.load_profile("myprofile")
     assert result == {"provider": "mock-aws"}
+
+    # Load nonexistent profile
     result = cloudless.profile.load_profile("myprofile2")
     assert not result
+
+    # Save nonexistent profile and load it back
     cloudless.profile.save_profile("myprofile2", {"provider": "mock-aws"})
     result = cloudless.profile.load_profile("myprofile2")
     assert result == {"provider": "mock-aws"}
+
+    # Test our profile selection rules
+    if "CLOUDLESS_PROFILE" in os.environ:
+        del os.environ["CLOUDLESS_PROFILE"]
+    assert cloudless.profile.select_profile(None) == "default"
+    assert cloudless.profile.select_profile("foo") == "foo"
+    os.environ["CLOUDLESS_PROFILE"] = "bar"
+    assert cloudless.profile.select_profile(None) == "bar"
+    assert cloudless.profile.select_profile("foo") == "foo"
